--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 # command to install dependencies
 install: "pip install -r dependencies.pip --use-mirrors"
 # command to run tests
-script: ./manage.py test techism events ical rss twitter organizations api 
+script: ./manage.py test techism
